# sfSnake

./: CMakeLists.txt  CMakeSettings.json  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameOverScreen.cpp  GameScreen.cpp  GameScreen.h  LICENSE  MenuScreen.cpp  README.md  RuleScreen.cpp  RuleScreen.h  SettingScreen.cpp  SettingScreen.h  Snake.cpp  Snake.h  SnakeNode.cpp  SnakeNode.h  Wall.cpp  Wall.h  vcpkg.json  wall.txt
